deployment/apps/argocd-http-route/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-http-app
  namespace: argocd
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: shared-default-gateway
    namespace: default
    sectionName: shared-https
  hostnames:
  - argocd.apps.timgiertz.com
  rules:
  - matches:
    - path:	
        type: PathPrefix	
        value: /
    backendRefs:
      - group: ''
        kind: Service
        name: argocd-server
        port: 80
---
